# saudi-open-data-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_TASK_CONTEXT.md  Dockerfile  GLOSSARY.md  LICENSE  NOTICE  README.md  TASKS.md  docker-compose.yml  gemini-ui.sh  mcp_test.py  pyproject.toml  server.json  stdio_test.py
.github/workflows/: ci.yml  upstream-canary.yml
.local/: registry.sqlite
.playwright-mcp/: page-2026-04-19T06-51-30-193Z.yml  page-2026-04-19T06-51-49-089Z.yml  page-2026-04-19T06-52-18-695Z.yml  page-2026-04-19T06-52-32-783Z.yml  page-2026-04-19T06-52-47-049Z.yml
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/.tsbuildinfo-node/: tsconfig.node.tsbuildinfo  vite.config.js
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: AppShell.tsx  Breadcrumbs.tsx  CardDisclosure.tsx  CoverageSignal.tsx  DatasetCard.tsx  DatasetSelector.tsx  DatasetStateOverview.tsx  ErrorBoundary.tsx  FilterForm.tsx  Header.tsx  HealthCard.tsx  MetadataStrip.tsx  ResultTable.tsx  SnapshotContextBlock.tsx  StateBlocks.tsx  StatusBadge.tsx
dashboard/src/i18n/: ar.ts
dashboard/src/lib/: catalogPresentation.ts  datasetSurface.ts  displayText.ts  exportArtifacts.ts  fieldLabels.ts  format.ts  liveData.ts  mcpClient.ts  resultTablePresentation.ts  runtimeValidation.ts  statePresentation.ts  statusTerms.ts
dashboard/src/mocks/: datasets.ts  health.ts  observability.ts  previews.ts  queryResults.ts  status.ts
dashboard/src/pages/: HomePage.tsx  QueryPage.tsx  SystemStatusPage.tsx
dashboard/src/test/: CardDisclosure.test.tsx  ErrorBoundary.test.tsx  FilterForm.test.tsx  HomePage.test.tsx  MetadataStrip.test.tsx  QueryPage.test.tsx  ResultTable.test.tsx  StateBlocks.test.tsx  SystemStatusPage.test.tsx  exportArtifacts.test.ts  format.test.ts  mcpClient.test.ts  queryResults.test.ts  runtimeValidation.test.ts  statePresentation.test.ts
dashboard/src/types/: core.ts
docs/: ARCHITECTURE.md  CHANGELOG.md  COMMUNITY_DIRECTORY_SUBMISSIONS.md  COMPLIANCE.md  DATASETS.md  DEPLOYMENT.md  GASTAT_SOURCE_REALITY_CHECK.md  GOVERNANCE.md  LICENSING.md  MOF_SOURCE_REALITY_CHECK.md  OPERATIONS.md  PERSISTENCE.md  ROADMAP.md  RUNBOOKS.md
docs/ADR/: ADR-001-start-with-sama.md  ADR-002-multi-source-readiness.md  ADR-003-freshness-and-hybrid-resolution-policy.md  ADR-004-v040-release-strategy.md
scripts/: bootstrap_registry.py  run_local_http.sh  run_local_stdio.sh
src/: sitecustomize.py
src/saudi_open_data_mcp/: __init__.py  __main__.py  cli.py  config.py  docker_entrypoint.py  server.py
src/saudi_open_data_mcp/connectors/: __init__.py  base.py  data_gov_sa.py  errors.py  mof.py  resolver.py  sama.py  stats_gov_sa.py
tests/: conftest.py  test_arabic_content.py  test_riyadh_timezone.py
tests/contracts/: test_architecture_boundaries.py  test_gastat_gdp_contracts.py  test_gastat_inflation_contracts.py  test_gastat_labor_contracts.py  test_http_auth_coverage.py  test_mof_fiscal_contracts.py  test_sama_high_frequency_contracts.py  test_wave1_source_contracts.py
tests/integration/: test_http_mcp_round_trip.py  test_scaffold_composition.py
tests/smoke/: test_cli.py
tests/unit/: test_audit_logging.py  test_catalog_resource.py  test_connector_contract.py  test_connector_resolver.py  test_container_runtime_contract.py  test_data_gov_sa_connector.py  test_docker_entrypoint.py  test_download_tool.py  test_export_artifacts.py  test_field_mapping.py  test_freshness.py  test_health_tool.py  test_http_auth.py  test_http_mcp_transport.py  test_http_readiness.py  test_imports.py  test_materialize_tool.py  test_metadata_tool.py  test_mof_connector.py  test_mof_real_fixtures.py  test_observability.py  test_pipeline.py  test_policies_resource.py  test_preview_policy.py  test_preview_tool.py  test_query_tool.py  test_rate_limit.py  test_registry_bootstrap.py  test_registry_models.py  test_registry_repository.py  test_sama_connector.py  test_sama_real_fixtures.py  test_search_tool.py  test_server_wiring.py  test_snapshots.py  test_stats_gov_sa_connector.py  test_stats_gov_sa_real_fixtures.py  test_tool_input_validation.py  test_upstream_canary.py  test_validators.py
(+67 files in other folders)
