[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "saudi-open-data-mcp"
version = "0.3.0"
description = "Production-minded internal MCP server for Saudi open data sources."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=2,<3",
    "httpx>=0.28.1",
    "pypdf>=6.9.2",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saudi_open_data_mcp"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
